--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="page-wrapper">
     <header id="header">
-			<a id="logo1" href="index.html"><img src="logo3.png" alt="company logo"></a>
+			<a id="logo1" href="index.html"><img src="./images/logo3.png" alt="company logo"></a>
 			<h1>My Demo Site</h1>
     </header>
     <nav id="main-nav">
