--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li>List 4</li>        
         </ul>
         <div id="center">
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0"allowfullscreen></iframe>
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
       <aside id="side-content">
@@ -52,8 +52,8 @@
         <ol id="news">
           <li><a href="#">Article 1</a><div><p>Preview of very interesting article article</p></div></li>
           <li><a href="#">Article 2</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#"><Article 3</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#"><Article 4</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 3</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 4</a><div><p>Preview of very interesting article article</p></div></li>
         </ol>
       </aside>
     </main>
